<resources>
    <string name="app_name">Vicara Service App</string>
    <string name="toggle_bluetooth">Toggle Bluetooth</string>
    <string name="start_notification_service">Start</string>
    <string name="stop_notification_service">Stop</string>
    <string name="enable_or_disable_notification_service">Enable or Disable Notification Service</string>
    <string name="network_status">Network Status : </string>
    <string name="bluetooth_status">Bluetooth Status :</string>
    <string name="on">ON</string>
    <string name="switch_on_bluetooth">Switch On Bluetooth</string>
    <string name="mobile_data">Mobile Data</string>
</resources>