<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.VicaraServiceApp.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.VicaraServiceApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_status"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/wifiStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/mobile_data"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FFA500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Switch
                android:id="@id/bluetoothToggleSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="55dp"
                android:text="@string/switch_on_bluetooth"
                android:textStyle="bold"
                android:textSize="15sp"
                android:thumbTint="@color/purple_700"
                android:layout_marginEnd="55dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetooth_status"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bluetoothStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:text="@string/on"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FFA500" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/stopNotificationService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/service_text"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="25dp"
                android:layout_toEndOf="@id/startNotificationService"
                android:text="@string/stop_notification_service" />

            <Button
                android:id="@+id/startNotificationService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/service_text"
                android:layout_marginLeft="25dp"
                android:text="@string/start_notification_service" />

            <TextView
                android:id="@+id/service_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/enable_or_disable_notification_service"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>